--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "encore/laravel-admin": "1.5.*",
+        "encore/laravel-admin": "1.6.0",
         "endroid/qr-code": "^3.2",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
@@ -61,5 +61,11 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
+    },
+     "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.laravel-china.org"
+        }
     }
 }
